BE/error/src/main/java/com/example/demo/auth/infra/oauth/slack/dto/SlackApiResponse.java
package com.example.demo.auth.infra.oauth.slack.dto;

public interface SlackApiResponse {
    boolean isOk();

    String getError();
}
